# polaris

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .readthedocs.yml  .yapfignore  CONTRIBUTE.md  InfluxDB.md  MANIFEST.in  Makefile  README.md  docker-compose.yml  parser.ipynb  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  run_docker_compose.sh  setup.cfg  setup.py  tox.ini  versioneer.py
contrib/normalizers/: acrux1.py  common.py  cubebel1.py  generate_fields.py  grifex.py  lightsail2.py  normalizer.py  space_weather.py
doc/code_flow_diagram/: README.md  polaris_code_flow.plantuml
docker/grafana/: env.grafana
docs/: InfluxDB.md  conf.py  getting_started_with_polaris.md  index.md  overview.md
docs/using/: getting_started_with_polaris.md
kaitai_parsers/: elfin.py  elfin_pp.py
notebooks/: elfin_predictions.ipynb  parser.ipynb  predictions_and_dependencies_using_xgboost.ipynb
pipeline/: NOTES.md  download.py  parse_csv.py
playground/data/: normalised_frames.csv
polaris/: __init__.py  __version__.py  decode_elfin.py  polaris.py
polaris/anomaly/: anomaly_detector.py  anomaly_detector_configurator.py  anomaly_detector_parameters.py  anomaly_output.py  behave.py  detector.py
polaris/batch/: batch.py
polaris/common/: config.py  json_serializable.py  learn_parameters.py  polaris_config.json.EXAMPLE  polaris_config.json.template
polaris/convert/: gexf.py  graph_converter.py
polaris/data/: fetched_data_preprocessor.py  graph.py
polaris/data_fetch/: data_fetch_decoder.py  satellites.json
polaris/data_viz/: README.md  dynamic_network_analysis_3d-ui.html  server.py
polaris/dataset/: dataset.py  frame.py  metadata.py
polaris/feature/: cleaner.py  cleaner_configurator.py  cleaner_parameters.py  filter.py
polaris/fetch/: data_fetch_decoder.py  fetch_import_sw.py  fetch_import_telemetry.py  list_satellites.py  satellites.json
polaris/learn/: README.md  analysis.py
polaris/learn/data/: graph.py  readers.py  writers.py
polaris/learn/feature/: extraction.py  selection.py
polaris/learn/predictor/: cross_correlation.py  cross_correlation_configurator.py  cross_correlation_parameters.py
polaris/learning/: README.md  __init__.py  analysis.py  feature.py
polaris/learning/data/: readers.py  writers.py
polaris/learning/feature/: entropy.py  extraction.py  selection.py  transformers.py
polaris/learning/predictor/: cross_correlation.py
polaris/reports/: server.py
polaris/reports/app/: .gitlab-ci.yml  package.json  readme.md
polaris/swpc/: _version.py  readme.md
polaris/swpc/docs/: about.rst  api_reference.rst  credits.rst  getting_started.rst  index.rst
polaris/swpc/orbit/: predict_orbit.py  tle_fetch.py
polaris/swpc/space_weather/: sw_extractor.py  sw_file_fetch.py
polaris/swpc/storage/: common.py  retrieve.py  store.py
polaris/viz/: README.md  dynamic_network_analysis_3d-ui.html  polaris.js  sample_data_fimps.json  server.py  style_sheet.css
robot/libraries/: FileComparer.py
robot/resources/: 44420-266-20210409T074243Z-all.csv  learn_config.json  polaris_config.json
robot/resources/check_files/: convert_graph.gexf  graph.json  graph_batch.json  normalized_frames.json
robot/resources/demoddata_csv/: data_908031_2019-08-11T09-41-34.csv  data_908031_2019-08-11T09-41-41.csv  data_908031_2019-08-11T09-41-48.csv  data_908031_2019-08-11T09-42-16.csv  (+34 more)
robot/testsuites/: polaris.robot
scripts/: generate_normalizer_fields.py  normalizer.template
tests/: conftest.py  test_anomaly_detector.py  test_anomaly_detector_configurator.py  test_anomaly_output.py  test_configuration.py  test_data_fetch_decoder.py  test_extraction.py  test_fet_importance.py  test_fetch_import_telemetry.py  test_graph.py  test_learn_configurator.py  test_learn_data.py  test_predictor_xcorr.py  test_selection.py
tests/test_convert/: graph_graph_key_missing.json  graph_links_key_missing.json  graph_nodes_key_missing.json  graph_ok.json  graph_ok_min.json
tests/test_data/: 2020Q1_DPD.txt  decoded_frames.json  merged_frames.csv  normalized_frames.json
(+177 files in other folders)
