[metadata]
name = polaris-ml
url = https://gitlab.com/librespacefoundation/polaris/polaris
author =
author_email =
license = LGPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
description = Polaris
description-file = README.md
long_description = file: README.md
long_description_content_type=text/markdown
keywords =
    telemetry, satellite, machine learning

[options]
packages = find:
include_package_data = True
python_requires = >= 3
install_requires =
    numpy
    kaitaistruct
    glouton==0.11.1
    click
    tqdm
    pandas
    scikit-learn>0.23.0
    xgboost
    satnogs-decoders
    fets
    mlflow
    mergedeep
    GPUtil==1.4.0
    vinvelivaanilai>=1.0.7
    enlighten
    betsi-ml>=0.0.3
    astroid==2.4.2

# For building documentation (ie, readthedocs stuff in the docs/
# directory).  To get these packages, run `pip install -e .[docs]`
# (yes, with the square brackets).
[options.extras_require]
docs =
    myst-parser
    sphinx

[bdist_wheel]
universal = true

[flake8]
exclude = polaris/_version.py,versioneer.py,build,.tox,playground,.venv

[tool:isort]
skip = _version.py,versioneer.py,build,.tox,playground
multi_line_output = 2

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = polaris/_version.py
versionfile_build = polaris/_version.py
tag_prefix =
parentdir_prefix =

[options.entry_points]
console_scripts =
    polaris = polaris.polaris:cli
