[metadata]
name = polaris-ml
url = https://gitlab.com/geugenm/polaris-ml-sandbox
author =
author_email =
license = LGPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
description = Polaris
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    telemetry, satellite, machine learning

[options]
packages = find:
include_package_data = True
python_requires = >= 3
install_requires =
    numpy
    kaitaistruct
    glouton>=0.11.0
    click
    tqdm
    black
    pandas
    scikit-learn>0.23.0
    xgboost
    satnogs-decoders
    fets
    mlflow
    mergedeep
    GPUtil
    vinvelivaanilai>=1.0.7
    enlighten
    betsi-ml>=0.0.3
    astroid>=2.4.2

[bdist_wheel]
universal = true

[flake8]
exclude = polaris/__version__.py,build,.tox,.venv

[tool:isort]
skip = __version__.py,build,.tox
multi_line_output = 2

[options.entry_points]
console_scripts =
    polaris = polaris.polaris:cli
