[metadata]
name = polaris-ml
url = https://github.com/geugenm/polaris-ml-playground
author =
author_email =
license = LGPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
description = Polaris
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    telemetry, satellite, machine learning

[options]
packages = find:
include_package_data = True
python_requires = >= 3
install_requires =
    numpy
    kaitaistruct
    glouton
    click
    tqdm
    black
    pandas
    scikit-learn
    xgboost
    satnogs-decoders
    fets
    mlflow
    mergedeep
    GPUtil
    enlighten
    betsi-ml
    astroid
    influxdb-client
    astropy
    poliastro
    orbit-predictor
    requests

[bdist_wheel]
universal = true

[flake8]
exclude = polaris/__version__.py,build,.tox,.venv,venv

[tool:isort]
skip = __version__.py,build,.tox
multi_line_output = 2

[options.entry_points]
console_scripts =
    polaris = polaris.polaris:cli
